--- a/css/component.css
+++ b/css/component.css
@@ -122,7 +122,7 @@
     cursor: pointer;
     overflow: hidden;
     user-select: none;
-    user-drag: none;
+    /* user-drag: none; */
     transition: all 0.3s;
 }
 .btn--primary,
@@ -288,22 +288,44 @@
 /* navbar 
 ---------------------*/
 .navbar{
-    height: 80px !important;
+    height: 80px;
 }
 
 .navbar--collapse{
-    margin-right: -16px !important;
-    margin-left: -16px !important;
+    margin-right: -16px;
+    margin-left: -16px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-right: 15px;
+    overflow-x: visible;
+    -webkit-overflow-scrolling: touch;
+    border-top: 1px solid transparent;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+}
+@media (min-width: 768px) {
+    .navbar-collapse {
+      width: auto;
+      border-top: 0;
+      -webkit-box-shadow: none;
+              box-shadow: none;
+    }
+    .navbar-collapse.collapse {
+      display: block;
+      height: auto;
+      padding-bottom: 0;
+      overflow: visible;
+    }
 }
 .navbar .logo{
-    float: left !important;
-    margin-top: 16px !important;
-    width:50px !important; 
-    height:50px !important; 
-    margin-left: 16px !important;
+    float: left;
+    margin-top: 16px;
+    width:50px; 
+    height:50px; 
+    margin-left: 16px;
 }
 .navbar .logo img{
-    height: 100% !important;
+    height: 100%;
 }
 /* .navbar__social-bar{
     padding: 24px;
@@ -318,7 +340,7 @@
     color: #fefefe;
 } */
 .navbar__nav{
-    float: right !important;
+    float: right;
 }
 /* menu-toggle 
 ---------------------*/
@@ -784,7 +806,7 @@
 }
 .modal-open .modal{
     overflow-x:hidden;
-    overflow-y:auto;
+    overflow-y:hidden;
 }
 .modal-dialog{
     position:relative;
@@ -803,7 +825,7 @@
     -webkit-box-shadow:0 3px 9px rgba(0,0,0,.5);
     box-shadow:0 3px 9px rgba(0,0,0,.5);
 }
-/* .modal-backdrop{
+.modal-backdrop{
     position:fixed;
     top:0;
     right:0;
@@ -819,7 +841,7 @@
 .modal-backdrop.in{
     filter:alpha(opacity=50);
     opacity:.5;
-} */
+}
 .modal-header{
     min-height:40px;
     padding:15px;
@@ -884,7 +906,7 @@ button.close {
 }
 @media (min-width:1440px){
     .modal-lg{
-        width:1300px;
+        width:1150px;
     }
 }
 @media (min-width: 576px){
@@ -982,28 +1004,22 @@ button.close {
     left:0;
     width:15%;
     font-size:20px;
-    color:#fff;
-    text-align:center;
-    text-shadow:0 1px 2px rgba(0,0,0,.6);
-    filter:alpha(opacity=50);
-    opacity:0;
+    color: rgba(150,150,150,.5);
+    text-align:center; 
 }
 .carousel-control.left{
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
     background-repeat:repeat-x;
 }
 .carousel-control.right{
     right:0;
     left:auto;
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
     background-repeat:repeat-x;
 }
 .carousel-control:focus,.carousel-control:hover{
-    color:#fff;
+    color: rgba(0,0,0,.5);
     text-decoration:none;
     filter:alpha(opacity=90);
     outline:0;
-    opacity:0.3;
 }
 .carousel-control .icon-left-open,
 .carousel-control .icon-right-open{
@@ -1012,7 +1028,6 @@ button.close {
     z-index:50;
     display:inline-block;
     margin-top:-10px;
-    color: rgba(0,0,0,.7);
 }
 .carousel-control .icon-left-open{
     left:50%;
@@ -1046,21 +1061,6 @@ button.close {
     margin:0;
     background-color:#fff;
 }
-/* .carousel-caption{
-    position:absolute;
-    right:15%;
-    bottom:20px;
-    left:15%;
-    z-index:10;
-    padding-top:20px;
-    padding-bottom:20px;
-    color:#fff;
-    text-align:center;
-    text-shadow:0 1px 2px rgba(0,0,0,.6);
-}
-.carousel-caption .btn{
-    text-shadow:none;
-} */
 @media screen and (min-width:768px){
     .carousel-control .icon-left-open,
     .carousel-control .icon-right-open,
@@ -1069,7 +1069,7 @@ button.close {
         width:30px;
         height:30px;
         margin-top:-15px;
-        font-size:30px;
+        font-size:28px;
     }
     .carousel-control .icon-left-open{
         margin-left:-15px;
@@ -1088,6 +1088,63 @@ button.close {
 }
 .sr-only{
     opacity: 0;
+}
+/* Carousel Style */
+.jumbotron__item .image{
+    height: 300px;
+    width: 500px;
+	background-size: cover;
+	background-position: center;
+}
+@media (max-width: 768px){
+	.owl-theme .owl-nav{
+		display: none;
+	}
+}
+.owl-theme .owl-nav .owl-prev,.owl-theme .owl-nav .owl-next{
+	position: absolute;
+	top: -36vh;
+	transform: translateY(-50%);
+	width: 48px;
+	height: 48px;
+	border-radius: 50%;
+	background-color: #fff;
+	box-shadow: 0 3px 10px rgba(0,0,0,0.5);
+	opacity: 0.5;
+	transition: all 0.3s;
+}
+.owl-theme .owl-nav .owl-prev:hover,.owl-theme .owl-nav .owl-next:hover{
+	opacity: 1;
+}
+.owl-theme .owl-nav .owl-prev{
+	left: 24px;
+	background-image: url("../images/slider-arrows.png");
+	background-size: cover;
+	background-position: right;
+}
+.owl-theme .owl-nav .owl-next{
+	right: 24px;
+	background-image: url("../images/slider-arrows.png");
+	background-size: cover;
+	background-position: left;
+}
+.owl-theme .owl-dots{
+	text-align: center;
+	position: absolute;
+	width: 100%;
+	bottom: 24px;
+}
+.owl-theme .owl-dots .owl-dot{
+	width: 12px;
+	height: 12px;
+	border-radius: 50%;
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 4px;
+	background-color: rgba(256,256,256,0.5);
+}
+.owl-theme .owl-dots .active{
+	background-color: #b5f7ff;
 }
 /*-------------------------*/
 /* $Contact
@@ -1173,7 +1230,7 @@ button.close {
     margin-bottom: 16px;
 }
 .info__phone a{
-    color: #fefefe;
+    color:#e881a7;
     font-size: 20px;
     font-weight: 400;
 }
@@ -1194,11 +1251,11 @@ button.close {
     max-width: 600px;
     margin-right: auto;
     margin-left: auto;
-    color: #fefefe;
+    color:#e881a7;
 }
 .copyright{
     text-align: center;
-    color: #fefefe;
+    color: #e881a7;
     font-size: 14px;
 }
 
